# EFE_projects

./: .gitignore  README.md  shanepratt.txt
EFE1_Installation/blink/: sdkconfig  sdkconfig.old
EFE1_Installation/helloworld/: CMakeLists.txt  sdkconfig
EFE2_Debug/cmd_sleep/: CMakeLists.txt  sdkconfig.old
EFE2_Debug/manual_debug/: sdkconfig
EFE2_Debug/sleeping/: README.md  partitions_8M.csv  sdkconfig  sdkconfig.old
EFE2_Debug/storage/: CMakeLists.txt  partitions_8M.csv
EFE2_Debug/wake_stubs/: CMakeLists.txt  sdkconfig
EFE3_FreeRTOS/: freertos.4task.c
EFE3_FreeRTOS/TemperatureSensor/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
EFE3_FreeRTOS/events/: CMakeLists.txt
EFE3_FreeRTOS/hr_timer/: CMakeLists.txt
EFE3_FreeRTOS/interrupt/: CMakeLists.txt
EFE3_FreeRTOS/queues/: CMakeLists.txt
EFE3_FreeRTOS/rt_timer/: CMakeLists.txt
EFE3_FreeRTOS/semaphore/: CMakeLists.txt
EFE3_FreeRTOS/tasks/: CMakeLists.txt
EFE4_BusIO/adc/: sdkconfig  sdkconfig.old
EFE4_BusIO/debounce/: CMakeLists.txt
EFE4_BusIO/lcd/: ._lcd1602_i2c.c  ._lcd1602_i2c.h  hint.txt  lcd1602_i2c.c  lcd1602_i2c.h
EFE4_BusIO/ledc/: partitions_8M.csv
EFE4_BusIO/sdmmc/: sdkconfig  sdkconfig.old
EFE4_BusIO/sdspi/: sdkconfig  sdkconfig.old
EFE4_BusIO/uart_config/: CMakeLists.txt
EFE5_Wifi/WebServer/: CMakeLists.txt  sdkconfig
EFE5_Wifi/http_server/: CMakeLists.txt
EFE5_Wifi/sms/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
EFE5_Wifi/websocket_dnw/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  (+1 more)
EFE7_DFU_ULP/ota_https/main/: CMakeLists.txt  main.c
(+120 files in other folders)
